# GFramework

./: .gitmodules  CMakeLists.txt  README.md
Data/Shaders/D3D12/: BasicShapesMeshPass.hlsl  DebugDraw.hlsl  DebugTexturesPass.hlsl  DecalPass.hlsl  DescriptorTables.hlsl  LightingPass.hlsl  MeshPass.hlsl  Packing.hlsl  ShadowPass.hlsl  SkyboxMesh.hlsl  TiledBinning.hlsl  Utils.hlsl
Engine/Source/Camera/: Camera.cpp  Camera.h
Engine/Source/Controller/: ControllerBase.cpp
Engine/Source/Core/: AppCore.cpp  AppCore.h  AppModeBase.cpp  AppModeBase.h  EngineCore.cpp  WindowsPlatform.cpp  WindowsPlatform.h
Engine/Source/Editor/: Editor.cpp  Editor.h
Engine/Source/Entity/: TransformObject.h
Engine/Source/InputSystem/: InputSystem.cpp  InputSystem.h
Engine/Source/InternalPlugins/RenderDoc/: RenderDocPlugin.cpp
Engine/Source/Math/: AABB.cpp  AABB.h  MathUtils.cpp  MathUtils.h
Engine/Source/Renderer/: DeferredRenderer.cpp  DeferredRenderer.h  DrawDebugHelpers.cpp  DrawDebugHelpers.h  LightTypes.h  RenderCommand.h  RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.h
Engine/Source/Renderer/Drawable/: Drawable.h
Engine/Source/Renderer/Drawable/ShapesUtils/: BasicShapes.cpp  BasicShapes.h  BasicShapesData.cpp  BasicShapesData.h
Engine/Source/Renderer/Material/: RenderMaterial.h
Engine/Source/Renderer/Material/EngineMaterials/: RenderMaterial_DefaultLighting.cpp  RenderMaterial_DeferredDecal.cpp  RenderMaterial_VisualizeDepth.cpp
Engine/Source/Renderer/Model/3D/: Model3D.h
Engine/Source/Renderer/Model/3D/Assimp/: AssimpModel3D.cpp  AssimpModel3D.h  AssimpModel3DPBRSphere.cpp  AssimpModel3DPBRSphere.h
Engine/Source/Renderer/RHI/: RHI.cpp  RHI.h  RHITypes.h
Engine/Source/Renderer/RHI/D3D12/: D3D12GraphicsTypes_Internal.cpp  D3D12GraphicsTypes_Internal.h  D3D12RHI.cpp  D3D12RHI.h  D3D12Resources.cpp  D3D12Resources.h  D3D12Upload.cpp  D3D12Upload.h  D3D12Utility.cpp  D3D12Utility.h
Engine/Source/Renderer/RHI/Resources/: MeshDataContainer.h  RHIBuffers.h  RHITexture.h  UniformBufferContainer.cpp  VertexInputLayout.h
Engine/Source/Renderer/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraphPrimitives.cpp  RenderGraphPrimitives.h
Engine/Source/Renderer/RenderPasses/: BindlessDecals.cpp  BindlessDecals.h  BindlessDecalsPass.cpp  BindlessDecalsPass.h  DebugPrimitivesPass.cpp  DebugPrimitivesPass.h  DebugTexturesPass.cpp  DebugTexturesPass.h  DeferredBasePass.cpp  DeferredBasePass.h  DeferredLighting.cpp  DeferredLighting.h  DeferredLightingPass.cpp  DeferredLightingPass.h  ShadowPass.cpp  ShadowPass.h  Skybox.cpp  Skybox.h  SkyboxPass.cpp  SkyboxPass.h
Engine/Source/Scene/: Scene.cpp  Scene.h  SceneManager.cpp
Engine/Source/Utils/: ImGuiUtils.cpp  ImGuiUtils.h  PerfUtils.h  Utils.cpp  Utils.h
